# socratink-tui-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLOUD-AGENT-DOCS-PLAN.md  CONTEXT.md  Dockerfile  FOUNDER_INSIGHTS.md  HANDOFF.md  HARNESS-BRIDGE-REGISTRY.md  HARNESS-TRACEABILITY.md  HARNESS.md  INDEX.md  README.md  SECURITY.md  app.mjs  bridge.py  bridge_contracts.py  bridge_fake.py  bridge_fake_defaults.py  bridge_fake_knobs.py  bridge_fake_lookup.py  bridge_fake_response.py  eslint.config.js  loop-server.mjs  package-lock.json  package.json  prompt_templates.py  pyproject.toml  repair_policy.mjs  requirements-dev.txt  requirements.txt  socratink  socratink-dashboard  socratink-harness  socratink-loop-server  socratink-persona-lab  socratink-tui  (+1 more)
.github/: pull_request_template.md
.mex/: ACTIVE.md  AGENTS.md  ROUTER.md  SETUP.md  SYNC.md  config.json
bridge_lib/: __init__.py  contract_replay.py  contracts.py
deploy/: FEEDBACK-GMAIL.md  LOOP-HOSTING.md  MINIMUM-VIABLE-DEPLOYMENT.md  RAILWAY.md
docs/: INDEX.md  founder-lab-todo.md  greenfield-ai-native-implementation-plan.md  prompt-usage-map.md
evals/: README.md
fixtures/: blocked_repair_script.json  circular_repair_script.json  cold_help_cap_zero_schema.json  cold_help_then_substantive.json  cold_help_turn_routing_script.json  cold_mixed_uncertainty_substantive.json  correlation_edge_substantive_cold.json  help_script.json  middle_schooler.json  novice_substrate_gate_script.json  phd_expert.json  phd_systems_researcher.json  recovery_success_script.json  (+5 more)
(+308 files in other folders)
